# chicane

./: Cargo.toml  README.md
src/: application.rs  domain.rs  engine.rs  main.rs
src/application/: entities_repository.rs  settings.rs  systems.rs
src/application/entities_repository/: entities_repository.rs  memory_entities_repository.rs
src/application/input/systems/: movement.rs  system.rs
src/application/settings/: engine_settings.rs  physics_settings.rs
src/application/systems/: movement.rs  rotation.rs  speed.rs  system.rs
src/application/systems/movement/: movement_system.rs
src/application/systems/speed/: speed_system.rs
src/core/: main_loop.rs
src/domain/: components.rs
src/domain/components/: brake.rs  component.rs  movement.rs  orientation.rs  position.rs  speed.rs  throttle.rs
src/domain/entities/: car.rs
src/domain/events/: event_sourcing_service.rs
src/domain/systems/: movement.rs
src/engine/: component.rs  entities_repository.rs  events.rs  system.rs
src/engine/entities_repository/: entities_repository.rs  event_source_entities_repository.rs  memory_entities_repository.rs
src/engine/events/: event_sourcing_service.rs
src/vehicle/: components.rs  systems.rs
src/vehicle/components/: brake.rs  orientation.rs  position.rs  speed.rs  steering.rs  throttle.rs
src/vehicle/systems/: movement.rs  rotation.rs  speed.rs
