[package]
name = "chicane"
version = "0.1.0"
authors = ["aliphe <matthias.alif@epitech.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "^0.21.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typetag = "0.1"

[features]
streams = []
